# Advent-2023

./: Cargo.toml  README.md  justfile
day1/: Cargo.toml
day1/benches/: benchmark.rs
day1/src/: part1.rs  part2.rs
day2/: Cargo.toml
day2/benches/: benchmark.rs
day2/src/: part1.rs  part2.rs
day3/: Cargo.toml
day3/benches/: benchmark.rs
day3/src/: part1.rs  part2.rs
day4/: Cargo.toml
day4/benches/: benchmark.rs
day4/src/: part1.rs  part2.rs
day5/: Cargo.toml
day5/benches/: benchmark.rs
day5/src/: part1.rs  part1.txt  part2.rs
day7/: Cargo.toml
day7/benches/: benchmark.rs
day7/src/: part1.rs  part2.rs
template/: Cargo.toml
template/src/: part1.rs  part2.rs
