[package]
name = "day5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
divan = { workspace = true }
nom = { workspace = true }
nom_locate = { workspace = true }
nom-supreme = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
