[package]
name = "day7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"

[dev-dependencies]
divan = { workspace = true }
lazy_static = { workspace = true }


[[bench]]
name = "benchmark"
harness = false
